--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -34,6 +34,7 @@ docutils==0.12
 feedparser==5.1.3
 gtfs-realtime-bindings==0.0.4
 gtfslib==0.1.0
+gunicorn==19.6.0
 gyp==0.1
 html5lib==0.999
 httplib2==0.9.2
