--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,47 @@
-gunicorn==19.6.0
-click==6.6
 Flask==0.11.1
-gtfs-realtime-bindings==0.0.4
-itsdangerous==0.24
+Flask-SQLAlchemy==2.1
 Jinja2==2.8
 MarkupSafe==0.23
-protobuf==3.1.0.post1
-requests==2.12.3
-six==1.10.0
+Pillow==2.6.1
+Pygments==2.0.1
+SOAPpy==0.12.22
+SQLAlchemy==1.1.4
 Werkzeug==0.11.11
+argparse==1.2.1
+cffi==0.8.6
+chardet==2.3.0
+click==6.6
+colorama==0.3.2
+cryptography==0.6.1
+decorator==3.4.0
+defusedxml==0.4.1
+docutils==0.12
+gtfs-realtime-bindings==0.0.4
+gunicorn==19.6.0
+html5lib==0.999
+ipython==2.3.0
+itsdangerous==0.24
+ndg-httpsclient==0.3.2
+numpy==1.8.2
+pexpect==3.2
+ply==3.4
+protobuf==3.1.0.post1
+psycopg2==2.6.2
+pyOpenSSL==0.14
+pyasn1==0.1.7
+pycparser==2.10
+pygobject==3.14.0
+python-apt==0.9.3.12
+python-debian==0.1.27
+python-debianbts==1.11
+pyxdg==0.25
+reportbug==6.6.3
+reportlab==3.1.8
+requests==2.12.3
+roman==2.0.0
+simplegeneric==0.8.1
+six==1.10.0
+urllib3==1.9.1
+wheel==0.24.0
+wsgiref==0.1.2
+wstools==0.4.3
