--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,4 @@
-Flask==0.11.1
-Flask-SQLAlchemy==2.1
-Jinja2==2.8
-MarkupSafe==0.23
-Pillow==2.6.1
-Pygments==2.0.1
-SOAPpy==0.12.22
-SQLAlchemy==1.1.4
-Werkzeug==0.11.11
-argparse==1.2.1
+bandwidth-sdk==1.0.9
 cffi==0.8.6
 chardet==2.3.0
 click==6.6
@@ -15,33 +6,53 @@ colorama==0.3.2
 cryptography==0.6.1
 decorator==3.4.0
 defusedxml==0.4.1
+Django==1.10.1
 docutils==0.12
+Flask==0.11.1
+Flask-SQLAlchemy==2.1
 gtfs-realtime-bindings==0.0.4
 gunicorn==19.6.0
+gyp==0.1
 html5lib==0.999
+httplib2==0.9.2
 ipython==2.3.0
 itsdangerous==0.24
+Jinja2==2.8
+lxml==3.4.0
+MarkupSafe==0.23
 ndg-httpsclient==0.3.2
 numpy==1.8.2
 pexpect==3.2
+Pillow==2.6.1
 ply==3.4
 protobuf==3.1.0.post1
 psycopg2==2.6.2
-pyOpenSSL==0.14
 pyasn1==0.1.7
 pycparser==2.10
+pycups==1.9.63
+pycurl==7.19.5
+Pygments==2.0.1
 pygobject==3.14.0
+pyOpenSSL==0.14
+pysmbc==1.0.15.3
 python-apt==0.9.3.12
+python-dateutil==2.5.3
 python-debian==0.1.27
 python-debianbts==1.11
+python-instagram==1.3.2
+python-oauth2==1.0.0
 pyxdg==0.25
+rauth==0.7.2
 reportbug==6.6.3
 reportlab==3.1.8
 requests==2.12.3
 roman==2.0.0
 simplegeneric==0.8.1
+simplejson==3.8.2
 six==1.10.0
+SOAPpy==0.12.22
+SQLAlchemy==1.1.4
 urllib3==1.9.1
-wheel==0.24.0
-wsgiref==0.1.2
+vboxapi==1.0
+Werkzeug==0.11.11
 wstools==0.4.3
