--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+amqp==2.1.4
 bandwidth-sdk==1.0.9
+billiard==3.5.0.2
+celery==4.0.2
 cffi==0.8.6
 chardet==2.3.0
 click==6.6
@@ -18,6 +21,7 @@ httplib2==0.9.2
 ipython==2.3.0
 itsdangerous==0.24
 Jinja2==2.8
+kombu==4.0.2
 lxml==3.4.0
 MarkupSafe==0.23
 ndg-httpsclient==0.3.2
@@ -41,6 +45,7 @@ python-debian==0.1.27
 python-debianbts==1.11
 python-instagram==1.3.2
 python-oauth2==1.0.0
+pytz==2016.10
 pyxdg==0.25
 rauth==0.7.2
 reportbug==6.6.3
@@ -54,5 +59,6 @@ SOAPpy==0.12.22
 SQLAlchemy==1.1.4
 urllib3==1.9.1
 vboxapi==1.0
+vine==1.1.3
 Werkzeug==0.11.11
 wstools==0.4.3
